<resources>
    <string name="app_name">پاکوب</string>
    <string name="title_activity_maps">پاکوب</string>
    <string name="NOTIF_CHANAL_PrivateMessage">پیام‌های شخصی</string>
    <string name="NOTIF_CHANAL_PrivateMessage_Desc">پیام‌های شخصی دریافتی به گوشی شما</string>
    <string name="NOTIF_CHANAL_PublicMessage">پیام‌های عمومی</string>
    <string name="NOTIF_CHANAL_PublicMessage_Desc">پیام‌های عمومی دریافتی به گوشی شما</string>
    <string name="nav_header_subtitle">http://www.pakoob24.ir</string>
    <string name="menu_help">راهنما/سوالات متداول</string>
    <string name="title_maps">نقشه‌ها</string>
    <string name="timeout_error">به نظر می‌رسد ارتباط شما با سرور قطع می‌باشد یا مشکلی در این بین وجود دارد</string>
    <string name="q_ClubTitle">سوالات درباره برنامه ها و باشگاه ها</string>
    <string name="q_Club_Limited">آیا پاکوب مخصوص شهر یا منطقه ای خاص است؟</string>
    <string name="q_Club_Limited_ans">پاکوب متعلق به تمام کوهنوردان و طبیعت گردان ایران در هر سطح فعالیت است. بنابراین منحصر به هیچ منطقه خاصی نمی شود. اگر نام منطقه یا شهر خاصی در پاکوب بیشتر به چشم می خورد، به علت فعالیت بیشتر افراد در آن منطقه هست.</string>
    <string name="q_CantFindMyClub">باشگاه من در لیست باشگاه ها نیست. چه کاری باید انجام دهم؟</string>
    <string name="q_CantFindMyClub_ans">در صورتی که شما مالک باشگاه هستید، برای درج شدن نام باشگاهتان با بخش پشتیبانی تماس حاصل فرمایید. در صورتی که عضوی از باشگاه هستید، از مدیر باشگاه بخواهید تا با بخش پشتیبانی تماس حاصل نماید.</string>
    <string name="q_Club_HasPrice">آیا اعلام برنامه های باشگاه ها یا ثبت نام افراد در پاکوب مستلزم پرداخت هزینه است؟</string>
    <string name="q_Club_HasPrice_ans">خیر
    \n
    سیاست کاری ما این است که باشگاه ها و افراد برای حضور در اپلکیشن پاکوب، هیچ هزینه مستقیمی پرداخت نکنند
    </string>
    <string name="q_ClubCantSendMessage">من یک باشگاه دار/فروشنده هستم، آیا امکان ارسال پیام تبلیغاتی به همه کاربران یا کاربرانی خاص از اپلکیشن وجود دارد؟</string>
    <string name="q_ClubCantSendMessage_ans">بله
    \n
    برای انجام این موضوع، با بخش پشتیبانی تماس حاصل فرمایید</string>
    <string name="q_NavigationPageTitle">سوالات درباره بخش مسیریابی و طراحی مسیر</string>
    <string name="q_MainPartOfMap">بخش های اصلی صفحه نقشه و مسیریابی</string>
    <string name="q_NavigationHowToDoIt">چگونه از اپلکیشن برای مسیریابی استفاده کنم؟</string>
    <string name="q_NavigationHowToDoIt_Ans">پس از ورود به بخش نقشه و مسیریابی، از طریق چند روش می توانید اقدام به مسیریابی کنید.
        \n
    1 - در صورتی که از قبل مسیر یا Track برنامه را داشته باشید، می توانید آن را از صفحه "نقاط و Trackهای من" وارد نرم افزار کرده، با رنگ دلخواه روی نقشه نمایش دهید و با هدایت مثلث مکان نمای حرکت به سمت آن، اقدام به مسیریابی کنید.
        \n
        2 - می توانید با کمک دانلود نقشه های تخصصی، روی آن ها اقدام به طراحی مسیر و پیمایش کنید.
    </string>
    <string name="q_NavigationCanTrack">آیا امکان ذخیره مسیری که در حال عبور از آن هستم وجود دارد؟</string>
    <string name="q_NavigationCanTrack_Ans">بله
        \n
        در صفحه نقشه و مسیریابی، دکمه بعلاوه را لمس کرده، گزینه ذخیره Track را انتخاب کنید تا فرآیند ثبت مسیر آغاز شود.
        \n
        دقت داشته باشید که ثبت مسیر در صورتی کار می کند که مکان دستگاه شما فعال شده و موقعیت فعلی شما را به نمایش بگذارد.
        \n
        پس از پایان کار، در صورتی که قصد ذخیره مسیر پیموده شده را دارید، در صفحه نقشه و مسیریابی روی دکمه ای که با علامت پرچم مشخص شده است ضربه بزنید.
    </string>
    <string name="q_NavigationCanSavePoint">آیا امکان ثبت یک نقطه در اپ وجود دارد؟</string>
    <string name="q_NavigationCanSavePoint_Ans">بله
        \n
        در صفحه نقشه و مسیریابی، دکمه بعلاوه را لمس کرده، گزینه اضافه کردن نقطه را انتخاب کنید.
        \n
در قسمت پایین صفحه می توانید برای نقطه نام مورد نظرتان را انتخاب کنید.
        \n
        همچنین در این بخش می توانید مختصات جدیدی را برای آن تنظیم کنید. این حالت برای زمانی کاربرد دارد که یک مختصات دارید و قصد دارید که مکان آن را روی نقشه بیابید.
    </string>
    <string name="q_NavigationCanNavigate">آیا امکان ناوبری (رفتن) به سمت یک نقطه وجود دارد؟</string>
    <string name="q_NavigationCanNavigate_Ans">بله
        \n
        برای این کار چند روش وجود دارد. اما روش معمول آن به این صورت است که نخست می بایست نقطه مورد نظر را در حالت ویرایش باز کنید (از صفحه نقاط و Trackهای من و همچنین در زمان ثبت نقطه)
        \n
        سپس روی دکمه "برو" ضربه بزنید تا ناوبری آغاز شود و اپ شما را به سمت هدف هدایت کند.
        \n
        در هنگام ناوبری، یک فلش و یک مسافت در صفحه نمایش داده می شود که جهت هدف و فاصله آن از نقطه فعلی شماست.
    </string>
    <string name="q_MapPageTitle">سوالات درباره نقشه‌های تخصصی</string>
    <string name="q_searchMap">چگونه نقشه مورد نظرمان را پیدا کنیم؟</string>
    <string name="q_searchMap_a">با استفاده از آیکون نقشه یا از صفحه نقشه‌ها و کادر جستجوی موجود در بالای این صفحه، می‌توانید نقشه مورد نظر را جستجو کنید.
        \n
        عبارت جستجو می‌تواند شامل نام منطقه یا رشته کوه یا قله مورد نظر یا بخشی از شماره اندیس نقشه باشد.
        \n
        همچنین می‌توانید در حالت صفحه کلید انگلیسی، با وارد کردن عرض و طول جغرافیایی که با یک ویرگول از هم جدا شده اند نیز نقشه‌هایی که آن نقطه را شامل می‌شوند پیدا کنید.</string>
    <string name="q_searchMap_resultType">نتیجه جستجوی نقشه: تفاوت عبارت سفارش با خرید چیست؟</string>
    <string name="q_searchMap_resultType_a">کلمه خرید برای زمانی است که نقشه آماده دانلود می‌باشد و به محض پرداخت هزینه احتمالی، می‌توانید آن را دانلود کنید. \n کلمه سفارش برای زمانی است که نقشه آماده سازی نشده و پس از انجام پرداخت، روال آماده سازی آن آغاز می‌شود پس از آماده سازی، آماده دانلود می‌باشد. به طور معمول یک تا سه روز عمل آماده سازی زمان می‌برد و خواهشمند است در این بازه زمانی از تماس با پشتیبانی خودداری فرمایید.</string>
    <string name="q_mapfile">فایل نقشه را چگونه می‌توانم داشته باشم؟</string>
    <string name="q_mapfile_a">جهت تهیه فایل نقشه (عکس یا فایل منبع) می‌توانید به سازمان نقشه برداری کشور مراجعه کرده، از واحد ارائه محصولات، فایل نقشه مورد نظر را جهت پرینت تهیه کنید. مرجع رسمی تولیدکننده نقشه در کشور ایران، سازمان نقشه برداری می‌باشد.</string>
    <string name="q_estefadeHamzaman">آیا می‌توانم با یک کاربری در بیش از یک دستگاه از نقشه‌هایی که خریده‌ام استفاده کنم؟</string>
    <string name="q_estefadeHamzaman_a">خیر، شما می‌بایست در هر دستگاه به طور مجزا نقشه را خریداری کرده باشید</string>
    <string name="q_hazfeNasb_a">بله، تاریخچه خرید شما در سرور ذخیره شده و در هر زمان که بخواهید می‌توانید نرم افزار را دوباره نصب کرده و نقشه‌های سابق خود را دانلود و سپس استفاده کنید.</string>
    <string name="q_hazfeNasb">آیا در صورت حذف نصب نرم افزار و سپس نصب مجدد آن، به نقشه‌هایی که خریداری کرده‌ام دسترسی خواهم داشت؟</string>
    <string name="q_ghofl">کاربرد دکمه قفل در صفحه اصلی چیست؟</string>
    <string name="q_ghofl_a">در حالت قفل شده، شما در مرکز تصویر قرار دارید و زاویه نگاهتان نیز به طور مرتب به روز رسانی می‌شود (نقشه توجیه شده‌است) اما در حالت قفل باز، کنترلِ زاویه دوربین به طور کامل برعهده شماست</string>
    <string name="q_emptyMaps">نرم افزار را نصب کرده‌ام اما صفحه نقشه فقط گوگل مپ را نشان می‌دهد. پس نقشه‌های تخصصی کجاست؟</string>
    <string name="q_emptyMaps_a">نقشه پایه نرم افزار، نقشه گوگل است. حال آن که با خرید هر کدام از نقشه‌های نقاط مختلف ایران می‌توانید نقشه آن منطقه را در لایه ای بالای گوگل مپ مشاهده کنید
        \n
        برای خرید نقشه، در صفحه اصلی روی آیکون نقشه کلیک کنید تا صفحه نقشه‌ها باز شود
    </string>
    <string name="q_isOffline">آیا پس از خرید و دانلود نقشه، می‌توانم به طور کاملا آفلاین از آن استفاده کنم؟</string>
    <string name="q_isOffline_a">بله، نرم افزار به گونه ای طراحی شده‌است که بدون نیاز به اینترنت بتوانید از نقشه‌هایی که قبلا دانلود کرده اید استفاده نمایید.</string>
    <string name="q_searchByLocation">چگونه نقشه‌های مربوط به یک نقطه خاص را پیدا کنم؟</string>
    <string name="q_searchByLocation_a">به صفحه نقشه‌ها - قسمت بالایی صفحه بروید. در کنار علامت جستجو، علامت انتخاب نقطه وجود دارد که با فشار دادن آن، صفحه انتخاب نقطه باز می‌شود.</string>
    <string name="q_contactByEmail">لطفا برای رفع هر گونه اشکال و ابهام، با تلفن 09151037928 با ایمیل زیر تماس حاصل فرمایید،
    \n
        نظرات ارزشمند شما، ما را در پیشبرد پروژه یاری خواهد کرد.
    </string>
    <string name="q_contactByEmail_a">app.pakoob@gmail.com</string>
    <string name="q_hajmeNaghshe">حجم نقشه‌های قابل دانلود چقدر است؟</string>
    <string name="q_hajmeNaghshe_a">هر نقشه در حدود 3 تا 6 مگابایت برای دانلود نیاز دارد.
            \n
        همچنین پس از دانلود، هر نقشه حدود 15 تا 20 مگابایت فضای حافظه دستگاه را اشغال خواهد کرد
        \n
        در صورتی که نقشه‌ها با زوم خیلی بالا تولید شوند، 30 مگابایت دیگر نیز حافظه اشغال خواهند کرد. این قابلیت به طور پیش فرض غیر فعال است.
    </string>
    <string name="dialog_readyToGoBank_title">در حال انتقال به بانک جهت پرداخت</string>
    <string name="dialog_readyToGoBank_paydesc"> مبلغ قابل پرداخت  </string>
    <string name="dialog_readyToGoBank_discountCop">در صورتی که کد تخفیف دارید، در کادر زیر وارد نمایید.</string>
    <string name="dialog_readyToGoBank_paydesc1">لطفا روال پرداخت را تا انتها ادامه دهید</string>
    <string name="dialog_readyToGoBank_paydesc_fel"> می‌باشد.</string>
    <string name="dialog_ertebatBaServer_Title">"ارتباط با سرور"</string>
    <string name="dialog_ertebatBaServer_Desc">"متاسفانه در ارتباط با سرور مشکلی به وجود آمده‌است. لطفا مجددا تلاش نمایید"</string>
    <string name="ok">"قبول"</string>
    <string name="OpenBattrySetting">باز کردن تنظیمات باتری</string>
    <string name="OpenSetting">باز کردن تنظیمات</string>
    <string name="afterBuyGPX_title">خرید مسیر</string>
    <string name="afterBuyGPX_desc">مسیر با موفقیت خریداری شد. شما مجددا به صفحه مربوط به آن هدایت شده و می توانید در بازه یک ماه آینده، آن را دانلود نمایید.</string>
    <string name="afterBuyMap_title">خرید نقشه</string>
    <string name="afterBuyMap_desc">نقشه مورد نظر خریداری شد. وضعیت آن را می‌توانید از صفحه نقشه‌ها دنبال کرده و در صورت آماده سازی آن را دانلود کنید</string>
    <string name="updateAvailable">نسخه جدید منتشر شد</string>
    <string name="deleteTiles">پاک کردن حافظه نقشه‌ها</string>
    <string name="deleteTiles_desc">اگر مشکل کمبود حافظه دارید از این گزینه استفاده کنید. برای تولید مجدد نقشه، به صفحه نقشه‌ها رفته گزینه استخراج را بزنید و نیاز به دانلود مجدد نقشه نیز نمی‌باشد.</string>
    <string name="deleteMaps">پاک کردن حافظه دانلودها</string>
    <string name="deleteMaps_desc">در صورت پاک نکردن حافظه نقشه‌ها، همچنان می‌توانید به کار خود ادامه دهید.</string>
    <string name="AreYouSureToDeleteFiles">آیا از پاک کردن فایل‌ها اطمینان دارید؟</string>
    <string name="AreYouSureToDeleteWaypoint">آیا از پاک کردن نقطه اطمینان دارید؟</string>
    <string name="DeleteConfirm">تایید حذف</string>
    <string name="deleteHighZoom">پاک کردن حافظه زوم‌های بالا</string>
    <string name="deleteHighZoom_desc">برای تولید مجدد، به صفحه نقشه‌ها رفته و با کمک دکمه سه نقطه در کنار نقشه، این زوم را مجددا فعال کنید. با این دکمه زوم‌های 100 متر و پایین تر حذف خواهد شد.</string>
    <string name="showHelpTitle">نمایش راهنما</string>
    <string name="GotoHelpLarge">راهنمای نرم افزار</string>
    <string name="showHelpTitle_desc">راهنمای نرم افزار را مطالعه کنید تا بتوانید از امکانات آن به بهترین شکل استفاده نمایید</string>
    <string name="showSpotlightAtHomeNextTime">راهنمای صفحه نخست در بازدید بعدی</string>
    <string name="showSpotlightAtMapNextTime">راهنمای صفحه نقشه در بازدید بعدی</string>
    <string name="q_posibleHighZoom">آیا امکان استفاده نقشه در زوم کم تر از 100 متر وجود دارد؟</string>
    <string name="btnAccept">تایید</string>
    <string name="btnCancel">انصراف</string>
    <string name="SelectClub_Title">انتخاب باشگاه</string>
    <string name="SelectClub_Favorate_Desc">لطفا تمام یا بخشی از نام باشگاه اصلی خود را وارد کنید.</string>
    <string name="NoItemFoundInSearch">هیچ موردی پیدا نشد</string>
</resources>